# pythox

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.tests/: progress.json
pythox/: __init__.py  astPrinter.py  expr.py  interpreter.py  parser.py  pythox.py  scanner.py  stmt.py  ttoken.py
scripts/: update_progress.py
tests/: test_coverage.py  test_expr.py  test_helper.py  test_parser.py  test_precedence.py  test_runner.py  test_scanner.py
tools/: generateAst.py  generateTokenType.py
