[project]
name = "pythox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt-toolkit>=3.0.51",
    "pytest>=8.4.1",
    "pytest-json-report>=1.5.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
